change on sept.2025

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       <footer class="footer">
         <div class="footer-content">
           <p class="copyright">
-            Copyright &copy; 2025, GHOSTs-OCTOPUS - All Rights Reserved
+            Copyright &copy; Sept. 2025, GHOSTs-OCTOPUS - All Rights Reserved
           </p>
           <div class="social-list">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
